--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -1,21 +1,26 @@
 ---
 layout: project
-title: Project 1
-date: September 22, 2014
-image: http://unsplash.it/400/200?random
+title: Multifunctional Epidermal Electronics
+date: February 26, 2013
+image: /msr-student-template/public/images/adv_mat.jpg
 ---
 
 ## Overview
-Lorem ipsum dolor sit amet, tota primis copiosae id quo. Melius eligendi elaboraret pri et, eam menandri platonem te. Tollit iudicabit gloriatur per ad. Ad diceret recteque eum, eu commodo petentium qui. No aliquid delectus eam, dicta eripuit convenire te nec. Vix no veritus dignissim. Erat ferri veniam ut eos, pro ex eius error intellegat, his te graecis oporteat honestatis.
 
-### Topic 1
-His nemore audiam consequat ad, no augue choro assueverit mei. Zril offendit tincidunt ne quo. At commodo integre alienum sea, cu vocent fuisset suscipit nam. Eum ex tation omnesque adversarium, mutat autem putant te nam. Id vix facilis complectitur, vis vitae vivendo euripidis ea, fugit eirmod an vix.
+(above figure from Adv. Mater. 2013, 25, 2773-2778)
 
-### Topic 2
-Ad case nemore equidem mea. Duo te iuvaret appetere appellantur, sint scaevola usu cu. Eum ne aeque ridens prompta. At legendos vulputate eos, pro illum iuvaret cu, ludus vituperata usu no.
+This project was an extension of a previous work on epidermal electronics
+devices for biomedical diagnostics applications. A distinct advantage
+of this class of device is that it matches the mechanical properties of
+human skin, facilitating comfortable wear and usage without impediment
+of the user's daily activities.
 
-### Topic 3
-Mel magna discere in. Mea ea dicit homero perfecto. Eam nulla facete scribentur in. Vide volutpat laboramus est cu, usu cu impetus dignissim. Ex pro decore impetus. Ius nihil iisque deterruisset an, ex sanctus verterem his. Doming prompta insolens est ut.
+We seek to improve the utility of the previous work by introducing
+multiple functionalities beyond the previous work, allowing for more
+durability and environmental robustness, and easier usage/initial
+application.
 
-### Topic 4
-Quod etiam pri ea, habemus electram ea eos, propriae insolens ea qui. Pro no mollis vituperatoribus. Augue quando delicatissimi ex per, vel ea vidisse dolorem eleifend. Has te aliquid senserit, reque soleat sed ea. At bonorum facilisis disputando est, error tantas appetere nec te. Mel in nobis animal.
+My main responsibilities in this project were device fabrication and testing.
+I was also responsible for experimental design, and quantitative characterization, of the mechanical properties of the encapsulant materials
+used in the device. I was also peripherally involved in device component
+design.
