--- a/_projects/2014-09-22-project-1.md
+++ b/_projects/2014-09-22-project-1.md
@@ -2,7 +2,7 @@
 layout: project
 title: Multifunctional Epidermal Electronics
 date: February 26, 2013
-image: /msr-student-template/public/images/adv_mat.jpg
+image: /public/images/adv_mat.jpg
 ---
 
 ## Overview
