--- a/_projects/2014-09-23-project-2.md
+++ b/_projects/2014-09-23-project-2.md
@@ -2,7 +2,7 @@
 layout: project
 title: Canny Edge Detection
 date: September 24, 2015
-image: /public/images/mycanny.jpg
+image: /msr-student-template/public/images/mycanny.jpg
 ---
 
 ## Overview
