modified image filepath

--- a/_projects/00-2014-09-24-project-3.md
+++ b/_projects/00-2014-09-24-project-3.md
@@ -2,7 +2,7 @@
 layout: project
 title: Epidermal Photonics
 date: September 19, 2014
-image: /msr-student-template/public/images/epidermal_photonics.jpg
+image: epidermal_photonics.jpg
 ---
 
 ## Overview
